--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <a href="https://discord.gg/cuUbBurC54">
                 <img src="https://img.shields.io/badge/Discord-Join-5865F2?style=flat&logo=discord&logoColor=white"alt="Discord" />
             </a>
-            <a href="https://github.com/turtlegamerw/kawaii-addon-_V2-real/releases">
+            <a href="https://github.com/kawaiiaddon/kawaii-addon-_V2-real/releases">
                 <img src="https://img.shields.io/github/downloads/turtlegamerw/kawaii-addon-_V2-real/total?color=green&label=Total%20Downloads" alt="Total Downloads" />
             </a>
-            <a href="https://github.com/turtlegamerw/kawaii-addon-_V2-real/blob/master/LICENSE">
+            <a href="https://github.com/kawaiiaddon/kawaii-addon-_V2-real/blob/1.21.8/LICENSE">
                 <img src="https://img.shields.io/github/license/turtlegamerw/kawaii-addon-_V2-real?color=blue" alt="License" />
             </a>
             <hr>
@@ -43,10 +43,10 @@
             <hr>
             <div class="button">
                <h2>supported clients</h2>
-               <a href="https://github.com/turtlegamerw/kawaii-addon-_V2-real" target="_blank">
+               <a href="https://github.com/kawaiiaddon/kawaii-addon-_V2-real" target="_blank">
                     <button class="meteor">Meteor</button>
                 </a>
-                <a href="https://github.com/John220099/kawaii-rusher" target="_blank">
+                <a href="https://github.com/kawaiiaddon/kawaii-rusher" target="_blank">
                     <button class="rusher">RusherHack</button>
                 </a>
             </div>
